rest conversion